@@ -1,8 +1,12 @@
 libteng (5.0.0) UNRELEASED; urgency=medium
 
+  [ Frantisek Boranek ]
   * Added support for custom filesystem.
 
- -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 18 Feb 2019 15:54:07 +0000
+  [ Martin Kucera ]
+  * fix: replacing multiple capture groups in regex_replace
+
+ -- Martin Kucera <martin.kucera2@firma.seznam.cz>  Tue, 14 Jan 2020 10:12:15 +0100
 
 libteng (4.0.8) stable; urgency=medium
 
